Added Staff block for department pages

--- a/templates/directory-staff.html.twig
+++ b/templates/directory-staff.html.twig
@@ -1,31 +1,11 @@
-<h2>Staff</h2>
-{% for department in departments %}
 <section>
     <header>
-        <h1>{{ department.getTitle() }}</h1>
+        <h1>Staff</h1>
     </header>
-    <div class="departmentInfo">
-        <dl>{% if department.directory_info.address %}
-            <dt>Address</dt>
-            <dd>{{ department.directory_info.address }}</dd>
-            {% endif %}
-
-            {% if  department.directory_info.office %}
-            <dt>Office</dt>
-            <dd>{{ department.directory_info.office }}</dd>
-            {% endif %}
-
-            {% if department.directory_info.email %}
-            <dt>Email</dt>
-            <dd>{{ department.directory_info.email }}</dd>
-            {% endif %}
-        </dl>
-    </div>
-    {% if department.directory_info.people %}
     <div class="departmentStaff">
         <table>
             <tbody>
-                {% for person in department.directory_info.people %}
+                {% for person in department.people %}
                 <tr><td>{% if person.displayName %}
                         {{ person.displayName }}
                         {% else %}
@@ -40,6 +20,4 @@
             </tbody>
         </table>
     </div>
-    {% endif %}
 </section>
-{% endfor %}
