Fixed to use displayname, if available

--- a/templates/directory-staff.html.twig
+++ b/templates/directory-staff.html.twig
@@ -1,7 +1,7 @@
 {% for person in department.people %}
 <div>
-    <h3>{% if person.displayName %}
-        {{ person.displayName }}
+    <h3>{% if person.displayname %}
+        {{ person.displayname }}
         {% else %}
         {{ person.firstname }} {{ person.lastname }}
         {% endif %}
