Added class to staff members
We had streamlines the CSS but lost the link to staff
members.  Now staff members are again using the same CSS as
board members.

Fixes #106

--- a/templates/directory-staff.html.twig
+++ b/templates/directory-staff.html.twig
@@ -1,5 +1,5 @@
 {% for person in department.people %}
-<div>
+<div class="member">
     <h3>{% if person.displayname %}
         {{ person.displayname }}
         {% else %}
