--- a/templates/directory-directory.html.twig
+++ b/templates/directory-directory.html.twig
@@ -1,7 +1,12 @@
+<nav>
+{% for department in departments %}
+<a href="#dept-{{ loop.index }}">{{ department.getTitle() }}</a>
+{% endfor %}
+<nav>
 {% for department in departments %}
 <section>
     <header>
-        <h1>{{ department.getTitle() }}</h1>
+        <h2 id="dept-{{ loop.index }}">{{ department.getTitle() }}</h2>
     </header>
     <div class="departmentInfo">
         <dl>{% if department.directory_info.address %}
@@ -22,22 +27,24 @@
     </div>
     {% if department.directory_info.people %}
     <div class="departmentStaff">
-        <table>
-            <tbody>
-                {% for person in department.directory_info.people %}
-                <tr><td>{% if person.displayName %}
-                        {{ person.displayName }}
-                        {% else %}
-                        {{ person.firstname }} {{ person.lastname }}
-                        {% endif %}
-                        <span class="title">{{ person.title }}</span>
-                    </td>
-                    <td>{{ person.email }}</td>
-                    <td>{{ person.pager }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        <dl>
+            {% for person in department.directory_info.people %}
+            <dt>{% if person.displayName %}
+                {{ person.displayName }}
+                {% else %}
+                {{ person.firstname }} {{ person.lastname }}
+                {% endif %}
+            </dt>
+            {% if person.title %}
+            <dd class="title">{{ person.title }}</dd>
+            {% endif %}
+            <dd><a href="mailto:{{ person.email }}">{{ person.email }}</a>
+                {% if person.pager %}
+                <a href="tel:+1{{ person.pager|replace('/[^0-9]/', '') }}">{{ person.pager }}</a>
+                {% endif %}
+            </dd>
+            {% endfor %}
+        </dl>
     </div>
     {% endif %}
 </section>
